fixing landscape css on tablet and desktop screen

--- a/src/Components/Container/Container.scss
+++ b/src/Components/Container/Container.scss
@@ -27,7 +27,7 @@
 }
 
 /* Small top margin on landscape mode */
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 625px) {
     .app__container{
         margin-top: 12px;
     }    
